// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProjectCard styles should render the component correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="dark:bg-primary flex h-[8.25rem] flex-col rounded-lg border border-neutral-200 px-4 py-3 text-sm dark:border-white/20"
        data-testid="project-card"
      >
        <div
          class="flex flex-1 flex-col gap-3"
        >
          <div
            class="flex items-center justify-between gap-2"
          >
            <a
              class="hover:text-accent dark:hover:text-accent-dark hover:underline"
              href="/home/projects/Spotify Clone App"
            >
              <h3
                class="line-clamp-1 text-base font-semibold"
              >
                Spotify Clone App
              </h3>
            </a>
            <div
              class="relative flex flex-col -mr-2"
            >
              <button
                aria-label="Project options"
                class="flex w-fit items-center justify-center gap-2 text-sm font-semibold transition-colors duration-200 ease-in-out hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 rounded-md p-1 text-primary/80 hover:text-primary dark:text-white/70 dark:hover:text-white"
                type="button"
              >
                <div>
                  <svg
                    class="size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <p
            class="line-clamp-2 flex-1 text-neutral-700 dark:text-neutral-200"
          >
            This is new project with react native
          </p>
        </div>
        <div
          class="flex items-baseline justify-between gap-2"
        >
          <span
            class="text-xs text-neutral-500 dark:text-neutral-300"
          >
            updated 4 hours ago
          </span>
          <div
            class="flex items-center gap-1 rounded-md border border-neutral-200 px-1.5 py-1 font-semibold dark:border-white/20"
          >
            <div
              class="h-4 w-4 rounded-full"
              style="background-color: rgb(37, 99, 235);"
            />
            <span
              class="text-xs"
            >
              SCA
            </span>
          </div>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="dark:bg-primary flex h-[8.25rem] flex-col rounded-lg border border-neutral-200 px-4 py-3 text-sm dark:border-white/20"
      data-testid="project-card"
    >
      <div
        class="flex flex-1 flex-col gap-3"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <a
            class="hover:text-accent dark:hover:text-accent-dark hover:underline"
            href="/home/projects/Spotify Clone App"
          >
            <h3
              class="line-clamp-1 text-base font-semibold"
            >
              Spotify Clone App
            </h3>
          </a>
          <div
            class="relative flex flex-col -mr-2"
          >
            <button
              aria-label="Project options"
              class="flex w-fit items-center justify-center gap-2 text-sm font-semibold transition-colors duration-200 ease-in-out hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 rounded-md p-1 text-primary/80 hover:text-primary dark:text-white/70 dark:hover:text-white"
              type="button"
            >
              <div>
                <svg
                  class="size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="12"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="12"
                    cy="19"
                    r="1"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <p
          class="line-clamp-2 flex-1 text-neutral-700 dark:text-neutral-200"
        >
          This is new project with react native
        </p>
      </div>
      <div
        class="flex items-baseline justify-between gap-2"
      >
        <span
          class="text-xs text-neutral-500 dark:text-neutral-300"
        >
          updated 4 hours ago
        </span>
        <div
          class="flex items-center gap-1 rounded-md border border-neutral-200 px-1.5 py-1 font-semibold dark:border-white/20"
        >
          <div
            class="h-4 w-4 rounded-full"
            style="background-color: rgb(37, 99, 235);"
          />
          <span
            class="text-xs"
          >
            SCA
          </span>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProjectCard styles should render the component correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <article
        class="dark:bg-primary flex h-[8.25rem] flex-col rounded-lg border border-neutral-200 px-4 py-3 text-sm dark:border-white/20"
        data-testid="project-card"
      >
        <div
          class="flex flex-1 flex-col gap-3"
        >
          <div
            class="flex items-center justify-between gap-2"
          >
            <a
              class="hover:text-accent dark:hover:text-accent-dark hover:underline"
              href="/home/projects/Spotify Clone App"
            >
              <h3
                class="line-clamp-1 text-base font-semibold"
              >
                Spotify Clone App
              </h3>
            </a>
            <div
              class="relative flex flex-col -mr-2"
            >
              <button
                aria-label="Project options"
                class="flex w-fit items-center justify-center gap-2 text-sm font-semibold transition-colors duration-200 ease-in-out hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 rounded-md p-1 text-primary/80 hover:text-primary dark:text-white/70 dark:hover:text-white"
                type="button"
              >
                <div>
                  <svg
                    class="size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <p
            class="line-clamp-2 flex-1 text-neutral-700 dark:text-neutral-200"
          >
            This is new project with react native
          </p>
        </div>
        <div
          class="flex items-baseline justify-between gap-2"
        >
          <span
            class="text-xs text-neutral-500 dark:text-neutral-300"
          >
            updated 4 hours ago
          </span>
          <div
            class="flex items-center gap-1 rounded-md border border-neutral-200 px-1.5 py-1 font-semibold dark:border-white/20"
          >
            <div
              class="h-4 w-4 rounded-full"
              style="background-color: rgb(37, 99, 235);"
            />
            <span
              class="text-xs"
            >
              SCA
            </span>
          </div>
        </div>
      </article>
    </div>
    <div>
      <article
        class="dark:bg-primary flex flex-col rounded-lg border border-neutral-200 px-4 py-3 text-sm dark:border-white/20 h-24"
        data-testid="project-card"
      >
        <div
          class="flex flex-1 flex-col gap-3"
        >
          <div
            class="flex items-center justify-between gap-2"
          >
            <a
              class="hover:text-accent dark:hover:text-accent-dark hover:underline"
              href="/home/projects/Spotify Clone App"
            >
              <h3
                class="line-clamp-1 text-base font-semibold"
              >
                Spotify Clone App
              </h3>
            </a>
            <div
              class="relative flex flex-col -mr-2"
            >
              <button
                aria-label="Project options"
                class="flex w-fit items-center justify-center gap-2 text-sm font-semibold transition-colors duration-200 ease-in-out hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 rounded-md p-1 text-primary/80 hover:text-primary dark:text-white/70 dark:hover:text-white"
                type="button"
              >
                <div>
                  <svg
                    class="size-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex items-baseline justify-between gap-2"
        >
          <span
            class="text-xs text-neutral-500 dark:text-neutral-300"
          >
            updated 4 hours ago
          </span>
          <div
            class="flex items-center gap-1 rounded-md border border-neutral-200 px-1.5 py-1 font-semibold dark:border-white/20"
          >
            <div
              class="h-4 w-4 rounded-full"
              style="background-color: rgb(37, 99, 235);"
            />
            <span
              class="text-xs"
            >
              SCA
            </span>
          </div>
        </div>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="dark:bg-primary flex flex-col rounded-lg border border-neutral-200 px-4 py-3 text-sm dark:border-white/20 h-24"
      data-testid="project-card"
    >
      <div
        class="flex flex-1 flex-col gap-3"
      >
        <div
          class="flex items-center justify-between gap-2"
        >
          <a
            class="hover:text-accent dark:hover:text-accent-dark hover:underline"
            href="/home/projects/Spotify Clone App"
          >
            <h3
              class="line-clamp-1 text-base font-semibold"
            >
              Spotify Clone App
            </h3>
          </a>
          <div
            class="relative flex flex-col -mr-2"
          >
            <button
              aria-label="Project options"
              class="flex w-fit items-center justify-center gap-2 text-sm font-semibold transition-colors duration-200 ease-in-out hover:cursor-pointer hover:bg-neutral-100 dark:hover:bg-white/15 rounded-md p-1 text-primary/80 hover:text-primary dark:text-white/70 dark:hover:text-white"
              type="button"
            >
              <div>
                <svg
                  class="size-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="12"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="12"
                    cy="19"
                    r="1"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex items-baseline justify-between gap-2"
      >
        <span
          class="text-xs text-neutral-500 dark:text-neutral-300"
        >
          updated 4 hours ago
        </span>
        <div
          class="flex items-center gap-1 rounded-md border border-neutral-200 px-1.5 py-1 font-semibold dark:border-white/20"
        >
          <div
            class="h-4 w-4 rounded-full"
            style="background-color: rgb(37, 99, 235);"
          />
          <span
            class="text-xs"
          >
            SCA
          </span>
        </div>
      </div>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
